mlgt changes

Ver 0.13

mlgtResult now retains all aligned variants. Enables generation of alignment reports with goal of implementing error correction.

Added alignReport() function to give tabular and graphical reports on sample/marker alignments. Focused on site-specific minor allele frequency.


Ver 0.12

Added checks for whitespace in paths. Terminates prepareMlgtRun if inputFastaFile has whitespace. Could not get System(formatdb) to work with them (even with multiple escapes). 

Replaced user specification of blastallPath, musclePath etc with environment variables BLASTALL_PATH, MUSCLE_PATH etc, which must be set by Sys.setenv. Added checks to prepareMlgtRun that they are set. Original variables still used internally. 

Remove re-use of temp file names. Unique file names allows multiple instances of mlgt() to read/write in same directory (future parallelization). Files could always be deleted after use.

Different sample data. 


Ver 0.11

This was the first package.