@@ -196,7 +196,6 @@ As with the BLAST results, it is also instructive to look at the distribution of
 \begin{center}
 <<label=plot_genotype_evidence, fig=TRUE, echo=TRUE>>=
 plotGenotypeEvidence(genotypeCall=my.genotypes[["DPA1_E2"]])	
-
 @
 \end{center}
 
@@ -239,18 +238,68 @@ my.genotypes <- callGenotypes(my.mlgt.Result,  mapAlleles=TRUE,
 The result is the same table of genotypes as before but with additional columns giving the names of alleles mapped to the variants.
 
 
+\subsection{Error correction}
+
+In some test data sets, we found very high numbers of unique variants for many marker-sample pairs. Most variants differed by only one or two positions from the most commonly found variants. The situation was worst for long sequences. Believing that this was due to errors introduced during amplification and/or sequencing, we sought to 'correct' some of the sequences. N.B. the following is conducted for sets of sequences from the same marker sample pair - information is not shared across samples or markers.
+
+To help decide if error correction would be worthwhile, several alignment reports can be produced. The default is a table giving the alignment length, the number of invariant sites and the numbers of sites where the Minor Allele Frequency (MAF) is above or below a threshold. The MAF is the proportion of sequences with the SECOND most common variant across a set of sequences and is calculated site-by-site. The default threshold is 0.01. The funcion \code{alignReport()} can produce two graphics: 1) a profile of the alignment showing frequencies at every site, and 2) a histogram of site frequencies (a site frequency spectrum) with the default correction threshold shown as a dotted line. 
+
+
+\begin{center}
+<<label=Align_Report_profile, fig=TRUE, echo=TRUE>>=
+alignReport(my.mlgt.Result,markers="DPA1_E2", samples="MID-22", method="profile")
+@
+\end{center}
+
+\begin{center}
+<<label=Align_Report_hist, fig=TRUE, echo=TRUE>>=
+alignReport(my.mlgt.Result,markers="DPA1_E2", samples="MID-22", method="hist")
+@
+\end{center}
+
+
+The graphs for all markers and samples can be output to files using \code{alignReport} with the \code{fileName} option specified.
+
+If the alignments have many sites below the correction threshold (i.e. very low frequency or unique variants) then \code{errorCorrect} can be used to change the bases at that position to the majority base. Any site with MAF above the threshold will be unchanged. If an alignment has fewer than 1/correctThreshold sequences, then errorCorrect will not attempt to make a correction (as none of the variants will have less that the threshold frequency). 
+
+Running errorCorrect is currently an additional step to mlgt. It creates a new mlgtResult object but doesn't take very long.
+
+\begin{scriptsize}
+<<label=Error_Correct>>=
+my.mlgt.Result.Corrected <- errorCorrect(my.mlgt.Result)
+# Produce an alignment report for the un-corrected and corrected results.
+alignReport(my.mlgt.Result, method="profile", fileName="alignReport_my.mlgt.Result")
+alignReport(my.mlgt.Result.Corrected, method="profile", fileName="alignReport_my.mlgt.Result.Corrected")
+@
+\end{scriptsize}
+
+If it has worked well, you may find that running callGenotypes on the corrected results gives more HOMOZYGOTE and HETEROZYGOTE calls. 
+
 \subsection{Miscellaneous}
 
-I've not yet included good provision for exporting all the sequence variants. The \code{mlgtResult} objects do currently store the DNA sequences and their export should probably be linked to \code{callGenotypes}. In the meantime, unique variants can be output as fasta with this function:-
+I've not yet included good provision for exporting all the sequence variants. The \code{mlgtResult} objects do currently store the DNA sequences and their export should probably be linked to \code{callGenotypes}. In the meantime, unique variants that have been assigned allele names can be output as fasta with this function:-
 
 <<label=Output sequences, eval=FALSE,keep.source=TRUE>>=
 dumpVariantMap.mlgtResult(my.mlgt.Result)
 @
 
+In addition another function can be used to export all sequences found for a marker-sample pair into a separate fasta alignment for each pair.  The output is in fasta format with the name of the sequence set to the sequence itself (?!). The `unique' flag can be used to limit the output to unique variants, in which case a count for that sequence is appended at the end of the sequence name line. 
+
+<<label=Output all sequences, eval=FALSE,keep.source=TRUE>>=
+dumpVariants(my.mlgt.Result)
+@
 
 \section{TO-DO}
 Parallelization. Pre-alignment filters. Other filters. More/better genotyping methods. Run comparison and results merging.
 
+
+\section{R Session}
+
+\begin{scriptsize}
+<<label=Session info>>=
+sessionInfo()
+@
+\end{scriptsize}
 
 \end{document}
 
